syntax = "proto3";

option csharp_namespace = "TaskService.Grpc";

package task_service;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
  
  rpc CancelTask (CancelTaskRequest) returns (TaskResponse);
  
  rpc CompleteTask (CompleteTaskRequest) returns (TaskResponse);
  
  rpc UpdateTaskStatus (UpdateTaskStatusRequest) returns (TaskResponse);
  
  rpc GetTaskById (GetTaskByIdRequest) returns (TaskResponse);
  
  rpc GetTasksWithFilters (GetTasksWithFiltersRequest) returns (GetTasksResponse);
  
  rpc GetTaskHistory (GetTaskHistoryRequest) returns (GetTaskHistoryResponse);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  int64 deadline_ticks = 3;
  TaskType task_type = 4;
  int64 created_by_user_id = 5;
  optional TaskMetadata metadata = 6;
}

message CancelTaskRequest {
  int64 task_id = 1;
  int64 canceled_by_user_id = 2;
}

message CompleteTaskRequest {
  int64 task_id = 1;
  int64 completed_by_user_id = 2;
}

message UpdateTaskStatusRequest {
  int64 task_id = 1;
  TaskStatus new_status = 2;
  int64 updated_by_user_id = 3;
}

message GetTaskByIdRequest {
  int64 task_id = 1;
}

message GetTasksWithFiltersRequest {
  TaskStatus status = 1;
  TaskType task_type = 2;
}

message GetTaskHistoryRequest {
  int64 task_id = 1;
}

message TaskResponse {
  bool success = 1;
  optional TaskDto task = 2;
  optional string error_message = 3;
}

message GetTasksResponse {
  bool success = 1;
  repeated TaskDto tasks = 2;
  optional string error_message = 3;
}

message GetTaskHistoryResponse {
  bool success = 1;
  repeated TaskHistoryDto history = 2;
  optional string error_message = 3;
}

message TaskDto {
  int64 id = 1;
  string title = 2;
  string description = 3;
  int64 deadline_ticks = 4;
  TaskType task_type = 5;
  TaskStatus status = 6;
  int64 created_at_ticks = 7;
  int64 updated_at_ticks = 8;
  TaskMetadata metadata = 9;
}

message TaskHistoryDto {
  int64 user_id = 1;
  HistoryType history_type = 2;
  int64 timestamp_ticks = 3;
}

message TaskMetadata {
  int64 employee_id = 1;
  string employee_role = 2;
}

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_ACTUAL = 1;
  TASK_STATUS_COMPLETED = 2;
  TASK_STATUS_CANCELED = 3;
}

enum TaskType {
  TASK_TYPE_UNSPECIFIED = 0;
  TASK_TYPE_NONE = 1;
}

enum HistoryType {
  HISTORY_TYPE_UNSPECIFIED = 0;
  HISTORY_TYPE_CREATED = 1;
  HISTORY_TYPE_COMPLETED = 2;
  HISTORY_TYPE_CANCELED = 3;
}
